trunk/yanl/examples/t1/correct/0300_comment_frenzy.yanl
program gigi;

var
	a : integer (* this is sparta!! ********);
	
begin
# a line comment
	a := (* the number 10 in hexa.*)16;
	(*) if you > see then else ;*) a := 1
end.
