trunk/yanl/examples/t1/fail/explicit_cast.yanl
# incorrect casts
program gigi;

var
        c:char;
        i:integer;
        b:boolean;
        r:real;

begin
        r := (real)b;

        b := (boolean)r;
        b := (boolean)c;
        
        c := (char)b;
end.